added delete option route and configurations
